fixed button jumping, fixed history upon login

--- a/Frontend/jeddebook_site/src/components/layout/footer/Footer.module.css
+++ b/Frontend/jeddebook_site/src/components/layout/footer/Footer.module.css
@@ -31,16 +31,26 @@
   width: 16px;
 }
 
+.underline {
+  height: 0.5px;
+  background-color: white;
+  margin-bottom: 4px;
+  margin-top: 4px;
+  width: 100px;
+}
+
 .footerLink,
 .impressumLink {
   color: white;
   text-decoration: none;
+  padding: 2px 0;
+  width: min-content;
 }
 
 .footerLink:hover {
   color: white;
   transition: all 0.3s;
-  transform: translateX(15px);
+  padding-left: 15px;
 }
 
 .impressumLink:hover {
@@ -58,4 +68,7 @@
 
 .links {
   margin-left: -9%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
